Fixed some Lint warnings.